--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,5 +31,11 @@
     "react-dom": "^18.2.0",
     "storybook": "^7.6.10",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@pixi-spine/loader-base": "^4.0.4",
+    "@pixi/react": "^7.1.1",
+    "pixi-spine": "^4.0.4",
+    "pixi.js": "^7.3.3"
   }
 }
