--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@pixi-spine/all-4.1": "^4.0.4",
     "@pixi-spine/loader-base": "^4.0.4",
     "@pixi/react": "^7.1.1",
     "pixi-spine": "^4.0.4",
