--- a/packages/thunderkick/package.json
+++ b/packages/thunderkick/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "@repo/spine",
+  "name": "@repo/thunderkick",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "types": "src/types.ts",
+  "types": "src/index.ts",
+  "scripts": {
+    "lint": "eslint . --max-warnings 0",
+    "generate:component": "turbo gen react-component",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
@@ -13,14 +19,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-storybook": "^0.6.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@pixi-spine/all-4.1": "^4.0.4",
-    "@pixi-spine/loader-base": "^4.0.4",
-    "@pixi/react": "^7.1.1",
-    "pixi-spine": "^4.0.4",
-    "pixi.js": "^7.3.3"
+    "@repo/assets": "*"
   }
 }
