--- a/packages/thunderkick/tsconfig.lint.json
+++ b/packages/thunderkick/tsconfig.lint.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "src/types.ts", "../thunderkick/external", "../thunderkick/thatStage.tsx", "../store"],
+  "include": ["src", "turbo"],
   "exclude": ["node_modules", "dist"]
 }
