--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -39,6 +39,8 @@
     "@repo/assets": "*",
     "@repo/spine": "*",
     "@repo/store": "*",
+    "@repo/addition": "*",
+    "@repo/thunderkick": "*",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "pixi-spine": "^4.0.4",
