--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,17 +15,22 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/rss": "^4.0.2",
     "@astrojs/sitemap": "^3.0.4",
-    "@repo/ui": "*",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.3",
     "browserify": "^17.0.0",
+    "pixi.js": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-toc": "^9.0.0",
     "typescript": "^5.3.3"
   },
   "peerDependecies": {
-    "@pixi/config": "*"
+    "@pixi/config": "*",
+    "@repo/ui": "*",
+    "@repo/thunderkick": "*",
+    "@repo/spine": "*",
+    "@repo/stage": "*",
+    "pixi.js": "*"
   }
 }
