--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/rss": "^4.0.2",
     "@astrojs/sitemap": "^3.0.4",
+    "@repo/reels-gamma": "^1.0.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.3",
